<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/choose_difficulty"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:layout_width="200dp"
        android:layout_height="20dp"/>

    <RadioGroup
        android:id="@+id/rgDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton android:id="@+id/rbEasy" android:text="@string/difficulty_easy"
            android:layout_width="200dp"
            android:layout_height="30dp"/>
        <RadioButton android:id="@+id/rbMedium" android:text="@string/difficulty_medium"
            android:layout_width="200dp"
            android:layout_height="30dp"/>
        <RadioButton android:id="@+id/rbHard" android:text="@string/difficulty_hard"
            android:layout_width="200dp"
            android:layout_height="30dp"/>
        <RadioButton android:id="@+id/rbVeryHard" android:text="@string/difficulty_very_hard"
            android:layout_width="200dp"
            android:layout_height="30dp"/>
    </RadioGroup>

    <TextView
        android:text="@string/field_size"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_width="200dp"
        android:layout_height="20dp"/>

    <Spinner
        android:id="@+id/spinnerSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
